Bug 360737 - Kmail crash after trying to apply a sieve script with syntax errors
Summary: Kmail crash after trying to apply a sieve script with syntax errors
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-03-19 15:39 UTC by Tom Mittelstädt
Modified: 2016-03-20 08:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Mittelstädt 2016-03-19 15:39:42 UTC
Application: kmail (5.0.2)

Qt Version: 5.5.1
Operating System: Linux 4.2.0-35-generic x86_64
Distribution: Ubuntu 15.10

-- Information about the crash:
kmail chrashes if i try to save a sieve script with syntax errors. there is a qmessagebox showing where the errors are and after accepting it kmail crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f2c052e0880 (LWP 3490))]

Thread 10 (Thread 0x7f2bf9b48700 (LWP 3506)):
#0  0x00007f2c2820488d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f2c1e5a11ec in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2c1e5a12fc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2c28d4950b in QEventDispatcherGlib::processEvents (this=0x7f2bf40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#4  0x00007f2c28cf050a in QEventLoop::exec (this=this@entry=0x7f2bf9b47d40, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f2c28b0cac4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f2c28b11a6e in QThreadPrivate::start (arg=0x26ce2d0) at thread/qthread_unix.cpp:331
#7  0x00007f2c1edc86aa in start_thread (arg=0x7f2bf9b48700) at pthread_create.c:333
#8  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f2bf92a9700 (LWP 3507)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c1a163feb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a164029 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bf92a9700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f2bb3ffd700 (LWP 3514)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e720d4 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bb3ffd700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f2bab7fc700 (LWP 3515)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e73103 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bab7fc700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f2bb37fc700 (LWP 3516)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e73103 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bb37fc700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f2bb2ffb700 (LWP 3517)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e73103 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bb2ffb700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f2bb27fa700 (LWP 3518)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e73103 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bb27fa700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f2bb1ff9700 (LWP 3519)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e73103 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bb1ff9700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f2bb17f8700 (LWP 3520)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f2c19e73103 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#2  0x00007f2c1a193ea1 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#3  0x00007f2c1edc86aa in start_thread (arg=0x7f2bb17f8700) at pthread_create.c:333
#4  0x00007f2c2820fe9d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f2c052e0880 (LWP 3490)):
[KCrash Handler]
#6  QWidget::show (this=0x0) at kernel/qwidget.cpp:7664
#7  0x00007f2c268618f1 in KSieveUi::ManageSieveScriptsDialog::slotPutResult (this=0x1108bc80, success=<optimized out>) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:274
#8  0x00007f2c28d21777 in QtPrivate::QSlotObjectBase::call (a=0x7fff3564df00, r=0x1108bc80, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#9  QMetaObject::activate (sender=0x4fe4af0, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff3564df00) at kernel/qobject.cpp:3698
#10 0x00007f2c28d220e7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f2c1b334ca0 <KManageSieve::SieveJob::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff3564df00) at kernel/qobject.cpp:3578
#11 0x00007f2c1b130e9e in KManageSieve::SieveJob::result (this=<optimized out>, _t1=0x4fe4af0, _t2=_t2@entry=false, _t3=..., _t4=false) at moc_sievejob.cpp:229
#12 0x00007f2c1b12f4fd in KManageSieve::SieveJob::Private::handleResponse (this=0x5c46b30, response=..., data=...) at ../../../libksieve/kmanagesieve/sievejob.cpp:181
#13 0x00007f2c1b12aa91 in KManageSieve::Session::processResponse (this=this@entry=0xf1d5780, response=..., data=...) at ../../../libksieve/kmanagesieve/session.cpp:258
#14 0x00007f2c1b12ce55 in KManageSieve::Session::dataReceived (this=this@entry=0xf1d5780) at ../../../libksieve/kmanagesieve/session.cpp:116
#15 0x00007f2c1b12d26d in KManageSieve::Session::feedBack (this=0xf1d5780, data=...) at ../../../libksieve/kmanagesieve/session.cpp:163
#16 0x00007f2c1b12fb14 in KManageSieve::SieveJob::Private::handleResponse (this=0x5c46b30, response=..., data=...) at ../../../libksieve/kmanagesieve/sievejob.cpp:163
#17 0x00007f2c1b12aa91 in KManageSieve::Session::processResponse (this=this@entry=0xf1d5780, response=..., data=...) at ../../../libksieve/kmanagesieve/session.cpp:258
#18 0x00007f2c1b12c860 in KManageSieve::Session::dataReceived (this=0xf1d5780) at ../../../libksieve/kmanagesieve/session.cpp:146
#19 0x00007f2c28d218ea in QMetaObject::activate (sender=0x697ee50, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3713
#20 0x00007f2c21e485a4 in ?? () from /usr/lib/x86_64-linux-gnu/libKF5KIOCore.so.5
#21 0x00007f2c28d218ea in QMetaObject::activate (sender=sender@entry=0x10a5c290, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3713
#22 0x00007f2c28d220e7 in QMetaObject::activate (sender=sender@entry=0x10a5c290, m=m@entry=0x7f2c28f3aee0 <QIODevice::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3578
#23 0x00007f2c28d9cf00 in QIODevice::readyRead (this=this@entry=0x10a5c290) at .moc/moc_qiodevice.cpp:155
#24 0x00007f2c20d50350 in QSslSocketBackendPrivate::transmit (this=0x682a3e0) at ssl/qsslsocket_openssl.cpp:1024
#25 0x00007f2c20d41ab1 in QSslSocket::qt_static_metacall (_o=_o@entry=0x10a5c290, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=14, _a=_a@entry=0x7fff3564fa30) at .moc/moc_qsslsocket.cpp:167
#26 0x00007f2c28d218ea in QMetaObject::activate (sender=sender@entry=0x2c73860, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3713
#27 0x00007f2c28d220e7 in QMetaObject::activate (sender=sender@entry=0x2c73860, m=m@entry=0x7f2c28f3aee0 <QIODevice::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3578
#28 0x00007f2c28d9cf00 in QIODevice::readyRead (this=this@entry=0x2c73860) at .moc/moc_qiodevice.cpp:155
#29 0x00007f2c20d1b19e in QAbstractSocketPrivate::canReadNotification (this=0xf1d0ac0) at socket/qabstractsocket.cpp:730
#30 0x00007f2c20d27b91 in QReadNotifier::event (this=<optimized out>, e=<optimized out>) at socket/qnativesocketengine.cpp:1169
#31 0x00007f2c295e79dc in QApplicationPrivate::notify_helper (this=this@entry=0x22675a0, receiver=receiver@entry=0x21e7ec0, e=e@entry=0x7fff3564fce0) at kernel/qapplication.cpp:3716
#32 0x00007f2c295ecea6 in QApplication::notify (this=0x7fff35650540, receiver=0x21e7ec0, e=0x7fff3564fce0) at kernel/qapplication.cpp:3499
#33 0x00007f2c28cf2d7b in QCoreApplication::notifyInternal (this=0x7fff35650540, receiver=0x21e7ec0, event=event@entry=0x7fff3564fce0) at kernel/qcoreapplication.cpp:965
#34 0x00007f2c28d499bd in QCoreApplication::sendEvent (event=0x7fff3564fce0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:224
#35 socketNotifierSourceDispatch (source=0x22a7b30) at kernel/qeventdispatcher_glib.cpp:101
#36 0x00007f2c1e5a0ff7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007f2c1e5a1250 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007f2c1e5a12fc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007f2c28d494ef in QEventDispatcherGlib::processEvents (this=0x22a7e00, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#40 0x00007f2c28cf050a in QEventLoop::exec (this=this@entry=0x7fff3564fef0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#41 0x00007f2c28cf85ec in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1229
#42 0x00007f2c2902cd1c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1530
#43 0x00007f2c295e3e15 in QApplication::exec () at kernel/qapplication.cpp:2976
#44 0x0000000000404260 in main (argc=1, argv=0x7fff356507b8) at ../../kmail/main.cpp:161

Reported using DrKonqi
Comment 1 Laurent Montel 2016-03-20 08:02:29 UTC
Git commit 298a203346f2e7eeff07ad926dec45e2fb19b592 by Montel Laurent.
Committed on 20/03/2016 at 08:02.
Pushed by mlaurent into branch 'master'.

Fix Bug 360737 - Kmail crash after trying to apply a sieve script with syntax errors

FIXED-IN: 5.2

M  +3    -1    src/ksieveui/managesievescriptsdialog.cpp

http://commits.kde.org/libksieve/298a203346f2e7eeff07ad926dec45e2fb19b592