Fix Bug 360737 - Kmail crash after trying to apply a sieve script with syntax errors

FIXED-IN: 5.2
BUG: 360737